# froggum

./: .gitignore  .gitmodules  COPYING  Gemfile  README.md  _config.yml  _layouts  assets  com.github.sapoturge.froggum.yml  index.md  io.github.sapoturge.froggum.yml  meson.build  navbar.md  todo.txt  usage.md
.github/: FUNDING.yml
.github/workflows/: main.yml
_doc_versions/: 0.2.md  0.3.md
_includes/: navbar.md
_layouts/: default.html
assets/: css  js
assets/css/: style.scss
data/: com.github.sapoturge.froggum.appdata.xml.in  com.github.sapoturge.froggum.contract  com.github.sapoturge.froggum.desktop.in  com.github.sapoturge.froggum.gresource.xml  com.github.sapoturge.froggum.gschema.xml  com.github.sapoturge.svg_editor.appdata.xml  com.github.sapoturge.svg_editor.desktop  io.github.sapoturge.froggum.appdata.xml.in  io.github.sapoturge.froggum.contract  io.github.sapoturge.froggum.desktop.in  io.github.sapoturge.froggum.gresource.xml  io.github.sapoturge.froggum.gschema.xml
data/css/: style.css
debian/: changelog  control  copyright
docs/: editing.md  index.md  install.md  overview.md  usage.md
docs/0.2/: editing.md  index.md  install.md  overview.md  usage.md
docs/0.3/: index.md  install.md
meson/: post_install.py
po/: LINGUAS  POTFILES  com.github.sapoturge.froggum.pot  com.github.sapoturge.svg_editor.pot  de.po  es.po  fr.po  it.po  pt.po
src/: Application.vala  Color.vala  EditorView.vala  Image.vala  Path.vala  PathRow.vala  Segment.vala
src/data/: BaseHandle.vala  Circle.vala  Command.vala  CommandStack.vala  Container.vala  ContextOption.vala  Element.vala  Ellipse.vala  Error.vala  Group.vala  Handle.vala  Image.vala  Line.vala  LinearSegment.vala  Parser.vala  Path.vala  PathSegment.vala  Pattern.vala  PatternSegment.vala  Point.vala  Polygon.vala  Polyline.vala  Rectangle.vala  Segment.vala  Transform.vala  Transformed.vala  TransformedHandle.vala  Undoable.vala  Updatable.vala
src/widgets/: EditorView.vala  ErrorBar.vala  GradientEditor.vala  PathRow.vala  PatternButton.vala  PatternChooserDialog.vala  StatusBar.vala  Tutorial.vala  Viewport.vala
